--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "postcss": "^8.2.15",
     "tailwindcss": "^3.0.24"
   }
 }
